# union-api-plugin-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Configuration.cmake  LICENSE.md  Nek.ps1  README.md
.github/workflows/: build.yaml  on-push.yaml  release.yaml
cmake/: FindUnionAPI.cmake
scripts/: Clear-Build.ps1  CommonFunctions.ps1  Convert-Gothic-Names.ps1  Get-UnionApiVersion.ps1  Set-UnionApiVersion.ps1  convert-gothic-names.bat
src/: Plugin.cpp  Plugin.hpp  Plugin_G2.hpp
src/Union/: HookUtils.hpp
userapi/: CGameManager.inl
vdf/: Build-VDF.ps1  CMakeLists.txt  plugin.vs.in
